Fixed playlist overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@
 {
     padding: 5px 10px;
     font-family: Calibri;
+    overflow: auto;
 }
 
 #playlist li:nth-child(2n)
